--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -17,3 +17,8 @@ jobs:
           SHOW_PROJECTS: "False"
           SHOW_SHORT_INFO: "False"
           SHOW_LOC_CHART: "False"
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_TOTAL_CODE_TIME: "False"
+          COMMIT_BY_ME: "True"
+          SHOW_UPDATED_DATE: "True"
+          SHOW_LINES_OF_CODE: "True"
