--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -27,4 +27,5 @@ jobs:
           SHOW_EDITORS: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_SHORT_INFO: "False"
-          SHOW_LOC_CHART: "False"
+          SHOW_LOC_CHART: "True"
+          DEBUG_LOGGING: "True"
