--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -18,7 +18,7 @@ jobs:
           SHOW_UPDATED_DATE: "True"
           SHOW_LINES_OF_CODE: "False"
           SHOW_TOTAL_CODE_TIME: "True"
-          SHOW_PROFILE_VIEWS: "True"
+          SHOW_PROFILE_VIEWS: "False"
           SHOW_COMMIT: "True"
           SHOW_DAYS_OF_WEEK: "False"
           SHOW_LANGUAGE: "True"
